# civitai-downloader

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  release.yml  test.yml
civitai_downloader/: __main__.py  main.py
civitai_downloader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
civitai_downloader/args/: args.py
civitai_downloader/download/: __init__.py  download.py
civitai_downloader/token/: token.py
civitai_model_downloader/: meta.yaml
example/: example.ipynb
src/: test.ipynb
src/civitai_downloader/: __init__.py  __version__.py  cli.py
src/civitai_downloader/api/: __init__.py  client.py  creators.py  model.py
src/civitai_downloader/args/: __init__.py  args.py
src/civitai_downloader/download/: backend.py  download.py
src/civitai_downloader/env/: jupyter.py
src/civitai_downloader/token/: token.py
tests/: test.py
tests/api/: test_creators.py  test_model.py
tests/download/: test.py  test_download.py
tests/token/: test.py  test_token.py
