[build-system]
requires=[
    "setuptools>=42",
    "wheel"
]
build-backend="setuptools.build_meta"

[project]
name="civitai-downloader"
version="0.3.5"
dependencies=[
    "requests",
    "tqdm",
    "ipywidgets"
]
requires-python=">=3.6"
authors=[
    {name="Hyunbeen Chang", email="bean980310@gmail.com"}
]
maintainers=[
    {name="Hyunbeen Chang", email="bean980310@gmail.com"}
]
description="A package to download models from CivitAI"
readme="README.md"
license={file="LICENSE"}
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/bean980310/civitai-downloader"
"Bug Tracker" = "https://github.com/bean980310/civitai-downloader/issues"
Changelog = "https://github.com/bean980310/civitai-downloader/blob/master/CHANGELOG.md"

[project.scripts]
civitai-downloader="civitai_downloader.cli:main"